package pb.message;

option java_package = "com.nettyserver.pb";
option optimize_for = SPEED;

message MessageWrapper {
	required int32 id = 1;
	required bytes msg = 2;
}

message LoginToken {
	optional string token = 1;
	optional int32 expired = 2;
}

