package pb.message;

option java_package = "com.nettyserver.pb";
option optimize_for = SPEED;

message LoginRequest {
    optional int32 aid = 1;
    optional string passport = 2;
	optional string password = 3;
}

message LoginResponse {
    required int32 error = 1;
    optional bytes loginToken = 2;
}
